fix: image generating flickering, #1415

--- a/src/global.less
+++ b/src/global.less
@@ -758,7 +758,7 @@ body {
 
   &.scatter {
     display: grid;
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(48%, 1fr));
     gap: 8px;
   }
 
